--- a/src/app/main-shell/home/time-line/time-line.component.html
+++ b/src/app/main-shell/home/time-line/time-line.component.html
@@ -1,12 +1,24 @@
 <div class="time-line">
+  <span class="giza"></span>
+  <div class="deco">
+    <img src="assets/images/flag.png" alt="" />
+    <p class="star" *ngFor="let star of stars">⭐️<small>⭐️</small></p>
+  </div>
   <div class="container">
     <mgl-timeline>
       <mgl-timeline-entry *ngFor="let user of users$ | async as users">
         <mgl-timeline-entry-header
-          ><img src="assets/images/char-{{ user.characterId }}.png" alt="" />{{
-            user.name
-          }}</mgl-timeline-entry-header
-        >
+          ><img
+            data-aos="zoom-in"
+            src="assets/images/char-{{ user.characterId }}.png"
+            width="240px"
+            height="240px"
+            alt=""
+          />
+
+          <p>{{ user.name }}</p>
+          <span>💌</span>
+        </mgl-timeline-entry-header>
         <mgl-timeline-entry-content
           [expandAnimationTiming]="contentAnimation ? '200ms ease' : '0ms'"
           [collapseAnimationTiming]="contentAnimation ? '100ms ease' : '0ms'"
@@ -21,10 +33,12 @@
         >
           <button></button>
         </mgl-timeline-entry-dot>
-        <mgl-timeline-entry-side>{{
-          user.joinedDate.toDate() | date
-        }}</mgl-timeline-entry-side>
+        <mgl-timeline-entry-side
+          >{{ user.joinedDate.toDate() | date: 'yyyy年M月d日'
+          }}<span>JOIN</span></mgl-timeline-entry-side
+        >
       </mgl-timeline-entry>
     </mgl-timeline>
   </div>
+  <span class="giza giza--end"></span>
 </div>
