--- a/src/app/main-shell/home/home/home.component.scss
+++ b/src/app/main-shell/home/home/home.component.scss
@@ -2,9 +2,15 @@
 @import 'mixins';
 
 .home {
-  background: url(../../../../assets/images/bg.png) no-repeat center/cover;
+  background: url(/assets/images/bg.png) no-repeat center/cover;
   height: 100vh;
   position: relative;
+  @include pc-s {
+    background: url(/assets/images/bg-pc-s.png) no-repeat center/cover;
+  }
+  @include sp {
+    background: url(/assets/images/bg-sp.png) no-repeat center/cover;
+  }
   &__inner {
     padding: 32px;
     height: 100vh;
@@ -12,39 +18,118 @@
   &__balloon {
     position: absolute;
     animation: fuwafuwa 3s linear 0s infinite;
+    @include sp {
+      display: none;
+    }
+    &--0 {
+      top: 10%;
+      left: 0;
+    }
     &--1 {
-      top: 480px;
+      top: 50%;
       left: 70%;
     }
     &--2 {
-      top: 100px;
+      top: 15%;
       left: 80%;
     }
     &--3 {
-      top: 120px;
-      left: 40%;
+      top: 75%;
+      left: 63%;
     }
     &--4 {
-      top: 260px;
-      left: 90%;
+      top: 65%;
+      left: 72%;
     }
     &--5 {
-      top: 160px;
-      left: 2%;
+      top: 70%;
+      left: 60%;
+    }
+    &--6 {
+      top: 5%;
+      left: 36%;
+    }
+    &--7 {
+      top: 0;
+      left: 3%;
+    }
+    &--8 {
+      top: 3%;
+      left: 5%;
+    }
+    &--9 {
+      top: 5%;
+      left: 1%;
+    }
+    &--10 {
+      top: 25%;
+      left: 82%;
+    }
+    &--11 {
+      top: 20%;
+      left: 84%;
     }
   }
-  // &__char {
-  //   animation: bress 3s linear 0s infinite;
-  // }
+  &__char {
+    max-width: 20%;
+    animation: bress 3s linear 0s infinite;
+  }
+}
+
+.hero {
+  max-width: 20%;
+  display: flex;
+  flex-flow: column;
+  position: absolute;
+  bottom: 64px;
+  right: 24px;
+  z-index: 200;
+  @include pc-s {
+    right: 0;
+  }
+  @include sp {
+    max-width: 100%;
+    position: static;
+  }
+  &__hero {
+    max-width: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    img {
+      max-width: 100%;
+      position: fixed;
+      bottom: 64px;
+      @include pc-s {
+        width: 300px;
+        bottom: 16px;
+      }
+      @include sp {
+        width: 200px;
+        position: absolute;
+        bottom: 16px;
+        display: block;
+        margin: 0 auto;
+      }
+    }
+  }
   &__date {
-    width: 300px;
+    max-width: 100%;
     margin: 0 auto;
-    text-align: center;
+    position: absolute;
+    top: -400%;
+    right: 0;
+    @include pc-s {
+      top: -300%;
+    }
+    @include sp {
+      max-width: 60%;
+      top: 24px;
+      left: 0;
+    }
   }
   &__action {
     animation: fuwafuwa 3s linear 0s infinite;
-    display: block;
-    margin: 0 auto;
   }
   &__btn {
     display: block;
@@ -60,7 +145,7 @@
     appearance: none;
     border: none;
     border-radius: 10px;
-    min-width: 200px;
+    min-width: 20%;
     padding: 16px 24px;
     box-shadow: 0 10px 60px -10px #cd106e;
     cursor: pointer;
@@ -71,7 +156,14 @@
     transition: all 1s cubic-bezier(0.03, 0.98, 0.52, 0.99);
     outline: none;
     position: relative;
-    z-index: 2;
+    z-index: 102;
+    @include pc-s {
+      font-size: 16px;
+      padding: 8px 16px;
+    }
+    @include sp {
+      display: none;
+    }
     &:hover {
       background: lighten(#f4157e, 2%);
       box-shadow: 0 8px 65px -5px #cd106e;
@@ -120,26 +212,4 @@
   100% {
     transform: scale(1, 1);
   }
-}
-
-.group-a {
-  width: 50%;
-  margin-left: 50%;
-}
-.group-b {
-  width: 38%;
-  float: left;
-  transform: translate(40px, 160px);
-}
-.group-c {
-  width: 38%;
-  float: left;
-}
-
-.hero {
-  display: flex;
-  flex-flow: column;
-  position: absolute;
-  bottom: 64px;
-  right: 96px;
 }
