--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,12 @@
 @import 'variables';
 @import 'mixins';
 
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 html,
 body {
   height: 100%;
