--- a/src/app/main-shell/home/closing/closing.component.scss
+++ b/src/app/main-shell/home/closing/closing.component.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .closing {
   max-width: 100%;
   background-image: linear-gradient(
@@ -13,8 +15,11 @@
   background-size: 40px 40px;
   background-attachment: fixed;
   padding: 80px 40px 120px;
-  font-family: 'M+ P Type-1 (basic latin) Black', 'M+ Type-1 (general-j) Black';
+  font-family: 'M PLUS 1p', sans-serif;
   position: relative;
+  @include sp {
+    padding: 40px 16px 40px;
+  }
 }
 
 .deco {
@@ -24,6 +29,9 @@
     top: 50px;
     right: 0;
     transform: rotate(13deg);
+    @include sp {
+      top: 0;
+    }
   }
 }
 
@@ -31,8 +39,11 @@
   margin-bottom: 40px;
   h2 {
     font-size: 48px;
-    font-weight: 900;
+    font-weight: 800;
     text-align: center;
+    @include sp {
+      font-size: 22px;
+    }
     span {
       display: block;
     }
@@ -40,19 +51,36 @@
   p {
     text-align: center;
     font-size: 40px;
+    font-weight: 800;
+    @include sp {
+      font-size: 22px;
+    }
   }
 }
 
 .flex {
-  display: flex;
-  flex-wrap: wrap;
-  transform: translateX(80px);
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: -80px;
   margin-bottom: 80px;
-  img {
-    margin-left: -80px;
+  padding: 80px;
+  @include sp {
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0;
+    margin-bottom: 40px;
   }
 }
 
+.users {
+  img {
+    width: 240px;
+    height: 240px;
+    @include sp {
+      width: 80px;
+      height: 80px;
+    }
+  }
+}
 .action {
   animation: fuwafuwa 3s linear 0s infinite;
   display: block;
