feat(time-line): rwd対応

--- a/src/app/main-shell/home/time-line/time-line.component.scss
+++ b/src/app/main-shell/home/time-line/time-line.component.scss
@@ -1,5 +1,7 @@
+@import 'mixins';
+
 .time-line {
-  width: 100%;
+  max-width: 100%;
   background-image: linear-gradient(
     -45deg,
     #566ca8 25%,
@@ -14,8 +16,10 @@
   background-attachment: fixed;
   position: relative;
   padding: 160px 0 120px;
-  font-family: 'M+ P Type-1 (basic latin) Black',
-    'M+ Type-1 (general-j) Regular';
+  font-family: 'M PLUS 1p', sans-serif;
+  @include sp {
+    padding: 40px 0 40px;
+  }
 }
 
 .giza {
@@ -38,6 +42,9 @@
     top: 50px;
     left: 0;
     transform: rotate(-13deg);
+    @include sp {
+      top: 16px;
+    }
   }
   &--end img {
     top: 94%;
@@ -51,6 +58,9 @@
     left: 30%;
     z-index: 101;
     transform: rotate(-45deg);
+    @include sp {
+      display: none;
+    }
     &:nth-of-type(2) {
       top: 10%;
       left: 80%;
@@ -77,10 +87,17 @@ mgl-timeline-entry-header {
   color: #fafafa;
   cursor: pointer;
   img {
+    width: 240px;
+    height: 240px;
     position: absolute;
     top: 10%;
     left: -30%;
     z-index: 101;
+    @include sp {
+      width: 120px;
+      height: 120px;
+      left: 0;
+    }
   }
   span {
     font-size: 40px;
@@ -110,8 +127,6 @@ mgl-timeline-entry-side {
   border-radius: 6px;
   color: #303030;
   font-size: 24px;
-  font-weight: 600;
-  font-family: 'M+ P Type-1 (basic latin) Black';
   padding: 8px;
   span {
     display: block;
@@ -167,6 +182,11 @@ mgl-timeline-entry:nth-child(odd) mgl-timeline-entry-header span {
 
 mgl-timeline-entry:nth-child(odd) img {
   left: 80%;
+  @include sp {
+    width: 120px;
+    height: 120px;
+    left: 0;
+  }
 }
 
 @keyframes flash {
