feat(mixins): pc-s追加

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -4,6 +4,12 @@
   }
 }
 
+@mixin pc-s {
+  @media (max-width: 1200px) {
+    @content;
+  }
+}
+
 @mixin notSP {
   @media not all and (max-width: 600px) {
     @content;
