--- a/src/app/user-shell/user-header/user-header.component.scss
+++ b/src/app/user-shell/user-header/user-header.component.scss
@@ -22,6 +22,7 @@
     font-size: 24px;
     margin-right: auto;
     font-family: $font-admin-en;
+    font-weight: 700;
     color: $color-gradient-admin-middle;
     background-image: $gradient-admin-main;
     -webkit-background-clip: text;
