--- a/src/app/main-shell/main-header/main-header.component.html
+++ b/src/app/main-shell/main-header/main-header.component.html
@@ -1,26 +1,9 @@
-<header class="header">
-  <h1 class="header__logo">
-    <a routerLink="/">LOGO</a>
-  </h1>
-  <div class="header__actions">
-    <a href="/message-list" class="header__link">メッセージ一覧をみる</a>
-    <ng-container *ngIf="authService.user$ | async as user">
-      <button
-        mat-mini-fab
-        [matMenuTriggerFor]="userMenu"
-        [style.background-image]="'url(' + user.avatarURL + ')'"
-        class="header__icon"
-      ></button>
-      <mat-menu #userMenu="matMenu" class="header__menu">
-        <a mat-menu-item routerLink="/settings">
-          <mat-icon>edit</mat-icon>
-          <span>編集</span>
-        </a>
-        <button mat-menu-item (click)="authService.logout()">
-          <mat-icon>exit_to_app</mat-icon>
-          <span>ログアウト</span>
-        </button>
-      </mat-menu>
-    </ng-container>
-  </div>
-</header>
+<div class="header">
+  <a
+    class="header__link"
+    routerLink="/message-list"
+    aria-label="メッセージ一覧"
+  >
+    メッセージ一覧
+  </a>
+</div>
