--- a/src/app/user-shell/user-header/user-header.component.html
+++ b/src/app/user-shell/user-header/user-header.component.html
@@ -1,14 +1,9 @@
 <mat-toolbar class="header">
   <h1 class="header__logo">
-    <a routerLink="/">LOGO</a>
+    <a routerLink="/">Deer</a>
   </h1>
-  <a
-    routerLink="/message-list"
-    mat-button
-    class="example-icon"
-    aria-label="メッセージ一覧を見る"
-  >
-    メッセージ一覧へ
+  <a routerLink="/message-list" mat-button aria-label="メッセージ一覧">
+    メッセージ一覧
   </a>
   <ng-container *ngIf="authService.user$ | async as user">
     <button
