(fix) user-header, main-header スタイル修正・サービス名挿入 Fixes #62

--- a/src/app/main-shell/main-header/main-header.component.html
+++ b/src/app/main-shell/main-header/main-header.component.html
@@ -1,9 +1,12 @@
 <div class="header">
   <a
-    class="header__link"
+    class="header__btn"
     routerLink="/message-list"
+    matTooltip="メッセージを一覧で見る"
+    mat-fab
+    color="primary"
     aria-label="メッセージ一覧"
   >
-    メッセージ一覧
+    <mat-icon>list</mat-icon>
   </a>
 </div>
