--- a/src/app/user-shell/user-header/user-header.component.html
+++ b/src/app/user-shell/user-header/user-header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="header">
   <h1 class="header__logo">
-    <a routerLink="/">Deer</a>
+    <a routerLink="/">Dear</a>
   </h1>
   <a routerLink="/message-list" mat-button aria-label="メッセージ一覧">
     メッセージ一覧
