--- a/src/app/user-shell/settings/settings/settings.component.scss
+++ b/src/app/user-shell/settings/settings/settings.component.scss
@@ -49,6 +49,12 @@ mat-form-field {
     padding: 16px 0;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.04);
+    span {
+      display: block;
+    }
+    p {
+      margin-bottom: 16px;
+    }
   }
   &__avatar-label {
     margin-bottom: 12px;
