--- a/src/app/user-shell/settings/settings/settings.component.scss
+++ b/src/app/user-shell/settings/settings/settings.component.scss
@@ -49,11 +49,12 @@ mat-form-field {
     padding: 16px 0;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.04);
-    span {
-      display: block;
-    }
+  }
+  &__description {
+    margin-bottom: 16px;
     p {
-      margin-bottom: 16px;
+      font-size: 14px;
+      color: rgba(0, 0, 0, 0.8);
     }
   }
   &__avatar-label {
