feat(settings): キャラセレクト変更あればdisabled解除

--- a/src/app/user-shell/settings/settings/settings.component.html
+++ b/src/app/user-shell/settings/settings/settings.component.html
@@ -152,7 +152,11 @@
           <div class="settings__actions">
             <button
               class="btn-admin"
-              [disabled]="form.invalid || form.pristine || processing"
+              [disabled]="
+                (form.invalid && selectedCharacterId === userCharacterId) ||
+                (form.pristine && selectedCharacterId === userCharacterId) ||
+                processing
+              "
             >
               <span>{{
                 toggleBtnText(form.get('isPublic').value, form.pristine)
