スタイル調整 Fixes #64

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -12,7 +12,7 @@
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $deer20201105-primary: mat-palette($mat-blue);
-$deer20201105-accent: mat-palette($mat-lime, A200, A100, A400);
+$deer20201105-accent: mat-palette($mat-grey, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $deer20201105-warn: mat-palette($mat-red);
