--- a/src/app/user-shell/message-list/message-list/message-list.component.html
+++ b/src/app/user-shell/message-list/message-list/message-list.component.html
@@ -1,6 +1,8 @@
 <div class="message-list">
   <div class="container">
-    <mat-spinner class="loading" *ngIf="isloading"></mat-spinner>
+    <div class="loading-wrapper" *ngIf="isloading">
+      <mat-spinner class="loading" diameter="56" color="accent"></mat-spinner>
+    </div>
 
     <div class="message-list__inner">
       <app-message-card
