--- a/src/styles.scss
+++ b/src/styles.scss
@@ -147,22 +147,75 @@ mat-form-field {
   }
 }
 
-mgl-timeline .mgl-timeline-line {
-  background: linear-gradient(
-    to bottom,
-    red 5.3%,
-    orange 23.3%,
-    orange 19.6%,
-    yellow 37.6%,
-    yellow 33.9%,
-    green 51.9%,
-    green 48.2%,
-    aqua 66.2%,
-    aqua 62.5%,
-    blue 80.5%,
-    blue 76.8%,
-    purple 94.8%
-  ) !important;
-  top: 56px !important;
-  border-radius: 8px;
+mgl-timeline {
+  padding-top: 80px !important;
+
+  .mgl-timeline-line {
+    background: linear-gradient(
+      to bottom,
+      red 5.3%,
+      orange 23.3%,
+      orange 19.6%,
+      yellow 37.6%,
+      yellow 33.9%,
+      green 51.9%,
+      green 48.2%,
+      aqua 66.2%,
+      aqua 62.5%,
+      blue 80.5%,
+      blue 76.8%,
+      purple 94.8%
+    ) !important;
+    top: -8px !important;
+    border-radius: 8px;
+    z-index: 10;
+  }
+}
+
+mgl-timeline-entry-content {
+  & > div {
+    padding: 32px 24px !important;
+    line-height: 1.75;
+    text-align: justify;
+  }
+  h3 {
+    margin-bottom: 16px;
+  }
+}
+
+mgl-timeline-entry {
+  .mgl-timeline-entry-card {
+    background-color: #fff !important;
+    background-image: linear-gradient(
+      -45deg,
+      #f5f5f5 25%,
+      #fff 25%,
+      #fff 50%,
+      #f5f5f5 50%,
+      #f5f5f5 75%,
+      #fff 75%,
+      #fff
+    );
+    background-size: 10px 10px;
+    position: relative !important;
+    box-shadow: 8px 8px rgba(0, 0, 0, 0.2);
+  }
+  &:nth-of-type(odd) .mgl-timeline-entry-card {
+    right: 12px !important;
+    @media screen and (max-width: 687px) {
+      right: 0 !important;
+    }
+  }
+  &:nth-of-type(even) .mgl-timeline-entry-card {
+    left: 12px !important;
+    @media screen and (max-width: 687px) {
+      left: 0 !important;
+    }
+  }
+  &:nth-of-type(odd) mgl-timeline-entry-side {
+    transform: translateX(22px);
+  }
+  &:nth-of-type(even) mgl-timeline-entry-side {
+    transform: translateX(-22px);
+  }
 }
