--- a/src/app/user-shell/message-list/message-card/message-card.component.scss
+++ b/src/app/user-shell/message-list/message-card/message-card.component.scss
@@ -18,17 +18,18 @@
   }
   &__title {
     font-size: 18px;
+    margin-bottom: 20px;
   }
   &__content {
-    flex: 1;
     margin: 0;
-    padding: 20px 0;
     color: map-get($mat-grey, 800);
     font-size: 14px;
     text-align: justify;
     white-space: pre-wrap;
   }
   &__footer {
+    margin-top: auto;
+    padding-top: 20px;
     display: flex;
   }
   &__data {
