--- a/src/app/user-shell/message-list/message-list/message-list.component.html
+++ b/src/app/user-shell/message-list/message-list/message-list.component.html
@@ -3,11 +3,14 @@
     <div class="loading-wrapper" *ngIf="isloading">
       <mat-spinner class="loading" diameter="56" color="accent"></mat-spinner>
     </div>
-
+    <div class="message-list__toggle" *ngIf="!isloading">
+      <mat-slide-toggle [(ngModel)]="isOpen">本文表示</mat-slide-toggle>
+    </div>
     <div class="message-list__inner">
       <app-message-card
         *ngFor="let user of users$ | async"
         [user]="user"
+        [isOpen]="isOpen"
       ></app-message-card>
     </div>
   </div>
