feat(home): date若干の位置調整

--- a/src/app/main-shell/home/home/home.component.scss
+++ b/src/app/main-shell/home/home/home.component.scss
@@ -73,8 +73,8 @@
   }
   &__date {
     position: absolute;
-    bottom: 50vh;
-    right: 16px;
+    bottom: 46vh;
+    right: 0;
     max-width: 300px;
     width: 20%;
     @include sp {
