fix(time-line): 他のメッセージを開いても折りたたまれないようにする

--- a/src/app/main-shell/home/time-line/time-line.component.html
+++ b/src/app/main-shell/home/time-line/time-line.component.html
@@ -24,7 +24,7 @@
     />
   </h2>
   <div class="container">
-    <mgl-timeline>
+    <mgl-timeline [toggle]="false">
       <mgl-timeline-entry *ngFor="let user of users$ | async as users">
         <mgl-timeline-entry-header
           ><img
